feat: add lucide-react for improved iconography and update documentation links
- Integrated lucide-react for enhanced icon usage across the application, improving visual consistency and user experience.
- Updated documentation links in README.md to reflect the new directory structure, ensuring easier navigation for users.
- Added new translations for UI elements in English, German, and Turkish to support the latest features and maintain accessibility.

--- a/src/i18n/locales/de/translation.json
+++ b/src/i18n/locales/de/translation.json
@@ -37,6 +37,8 @@
     "title": "KI-Zusammenfassung",
     "generate": "Generieren",
     "generating": "Generiere...",
+    "collapse": "Einklappen",
+    "expand": "Ausklappen",
     "powered_by": "Unterstützt durch MeetLens KI",
     "overview": "Überblick",
     "action_items": "Aufgaben",
