--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -37,6 +37,8 @@
     "title": "AI Summary",
     "generate": "Generate",
     "generating": "Generating...",
+    "collapse": "Collapse",
+    "expand": "Expand",
     "powered_by": "Powered by MeetLens AI",
     "overview": "Overview",
     "action_items": "Action Items",
