Add network status indicator

--- a/src/i18n/locales/de/translation.json
+++ b/src/i18n/locales/de/translation.json
@@ -11,6 +11,11 @@
     "stop_meeting": "Besprechung beenden",
     "connected": "Verbunden",
     "disconnected": "Getrennt",
+    "offline": "Offline",
+    "checking": "Wird geprüft...",
+    "backend_unavailable": "Backend nicht erreichbar",
+    "offline_tooltip": "Sie sind offline. Stellen Sie die Verbindung wieder her, um die Aufnahme zu starten.",
+    "backend_unavailable_tooltip": "Backend ist nicht erreichbar. Bitte versuchen Sie es gleich erneut.",
     "settings": "Einstellungen",
     "application_settings": "Anwendungseinstellungen",
     "app_language": "App-Sprache",
