--- a/src/i18n/locales/en/translation.json
+++ b/src/i18n/locales/en/translation.json
@@ -11,6 +11,11 @@
     "stop_meeting": "Stop Meeting",
     "connected": "Connected",
     "disconnected": "Disconnected",
+    "offline": "Offline",
+    "checking": "Checking...",
+    "backend_unavailable": "Backend unavailable",
+    "offline_tooltip": "You are offline. Reconnect to start recording.",
+    "backend_unavailable_tooltip": "Backend is unavailable. Please try again shortly.",
     "settings": "Settings",
     "application_settings": "Application Settings",
     "app_language": "App Language",
