--- a/src/i18n/locales/tr/translation.json
+++ b/src/i18n/locales/tr/translation.json
@@ -11,6 +11,11 @@
     "stop_meeting": "Toplantıyı Durdur",
     "connected": "Bağlı",
     "disconnected": "Bağlantı Kesildi",
+    "offline": "Çevrimdışı",
+    "checking": "Kontrol ediliyor...",
+    "backend_unavailable": "Sunucuya ulaşılamıyor",
+    "offline_tooltip": "Çevrimdışısınız. Kaydı başlatmak için bağlantıyı geri getirin.",
+    "backend_unavailable_tooltip": "Sunucuya ulaşılamıyor. Lütfen birazdan tekrar deneyin.",
     "settings": "Ayarlar",
     "application_settings": "Uygulama Ayarları",
     "app_language": "Uygulama Dili",
